DramaMetrics now zeros last values to avoid games contaminating each other